--- a/src/View/CadastroNovoAluno.form
+++ b/src/View/CadastroNovoAluno.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
@@ -277,7 +277,7 @@
         <Component class="javax.swing.JButton" name="removerCadastro">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/examples/imagenss/menos vermelho.jpg"/>
+              <Image iconType="3" name="/View/imagenss/menos vermelho.jpg"/>
             </Property>
           </Properties>
           <Events>
@@ -295,7 +295,7 @@
               <Font name="Segoe UI" size="12" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/examples/imagenss/mais verde.png"/>
+              <Image iconType="3" name="/View/imagenss/mais verde.png"/>
             </Property>
           </Properties>
           <Events>
